@@ -1,61 +1,59 @@
 package com.example.controller;
 
-import com.example.dto.MembershipDTO;
+import com.example.dto.MembershipResponseDTO;
 import com.example.model.Membership;
 import com.example.service.MembershipService;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Locale;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/membership")
+@RequiredArgsConstructor
 public class MembershipController {
 
+    // Eesti locale kuupäevavorming
+    private static final DateTimeFormatter EE_VORMING =
+            DateTimeFormatter.ofPattern("d. MMMM yyyy, HH:mm", new Locale("et"));
     private final MembershipService membershipService;
 
-    @Autowired
-    public MembershipController(MembershipService membershipService) {
-        this.membershipService = membershipService;
+    @PostMapping("/club/{hobbyGroupId}/participant/{participantId}")
+    public MembershipResponseDTO joinClub(@PathVariable Long hobbyGroupId,
+                                          @PathVariable Long participantId) {
+        Membership membership = membershipService.joinClub(hobbyGroupId, participantId);
+        return convertToDTO(membership);
     }
 
-    // Liitumine klubiga
-    @PostMapping
-    public ResponseEntity<MembershipDTO> joinClub(@RequestBody MembershipDTO membershipDTO) {
-        Membership membership = membershipService.joinClub(
-                membershipDTO.getClubId(),
-                membershipDTO.getParticipantId()
-        );
-        return new ResponseEntity<>(convertToDTO(membership), HttpStatus.CREATED);
+    @DeleteMapping("/club/{hobbyGroupId}/participant/{participantId}")
+    public void leaveClub(@PathVariable Long hobbyGroupId,
+                          @PathVariable Long participantId) {
+        membershipService.leaveClub(hobbyGroupId, participantId);
     }
 
-    // Klubist lahkumine
-    @DeleteMapping
-    public ResponseEntity<Void> leaveClub(@RequestBody MembershipDTO membershipDTO) {
-        membershipService.leaveClub(
-                membershipDTO.getClubId(),
-                membershipDTO.getParticipantId()
-        );
-        return ResponseEntity.noContent().build();
-    }
-
-    // Klubi liikmete pärimine
-    @GetMapping("/club/{clubId}")
-    public ResponseEntity<List<MembershipDTO>> getClubMembers(@PathVariable Long clubId) {
-        List<MembershipDTO> members = membershipService.getClubMembers(clubId).stream()
+    @GetMapping("/club/{hobbyGroupId}")
+    public List<MembershipResponseDTO> getClubMembers(@PathVariable Long hobbyGroupId) {
+        return membershipService.getClubMembers(hobbyGroupId).stream()
                 .map(this::convertToDTO)
-                .toList(); // kasutame Java 16+ toList() meetodit
-        return ResponseEntity.ok(members);
+                .collect(Collectors.toList());
     }
 
-    // Osaleja klubide pärimine
     @GetMapping("/participant/{participantId}")
-    public ResponseEntity<List<MembershipDTO>> getParticipantsClubs(@PathVariable Long participantId) {
-        List<MembershipDTO> clubs = membershipService.getParticipantsClubs(participantId).stream()
+    public List<MembershipResponseDTO> getParticipantsClubs(@PathVariable Long participantId) {
+        return membershipService.getParticipantsClubs(participantId).stream()
                 .map(this::convertToDTO)
-                .toList(); // samuti toList()
-        return ResponseEntity.ok(clubs);
+                .collect(Collectors.toList());
     }
 
+    private MembershipResponseDTO convertToDTO(Membership membership) {
+        return new MembershipResponseDTO(
+                membership.getId(),                                // komposiitvõti või null
+                membership.getParticipant().getFullName(),        // liige
+                membership.getHobbyGroup().getName(),             // grupi nimi
+                membership.getJoinedAt().format(EE_VORMING)       // eesti keeles kuupäev+kellaaeg
+        );
+    }
+}
